<resources>
    <string name="app_name">MicroLedger</string>

    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="add_amount">Add amount</string>
    <string name="add_assertion">Add assertion</string>
    <string name="add_assertion_cost">Add assertion cost</string>
    <string name="add_code">Add code</string>
    <string name="add_comment">Add comment</string>
    <string name="add_cost">Add cost</string>
    <string name="add_currency">Add currencies</string>
    <string name="add_note">Add note</string>
    <string name="add_payee">Add payee</string>
    <string name="add_status">Add status</string>
    <string name="add_transaction">Add transaction</string>
    <string name="amount">Amount</string>
    <string name="assertion">Assertion</string>
    <string name="assertion_cost">Assertion cost</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="change_default_currency">Change default currency</string>
    <string name="change_posting_fields">Change posting fields</string>
    <string name="change_transaction_fields">Change transaction fields</string>
    <string name="change_posting_width">Change posting width</string>
    <string name="code">Code</string>
    <string name="comment">Comment</string>
    <string name="copy">Copy</string>
    <string name="copy_and_edit">Copy and edit</string>
    <string name="cost">Cost</string>
    <string name="create_transaction">Add a transaction.</string>
    <string name="currencies">Currencies</string>
    <string name="currency_amount_order">Order of currency and amount</string>
    <string name="currency_amount_spacing">Spacing between currency and amount</string>
    <string name="currency_amount_spacing_off">Spacing disabled</string>
    <string name="currency_amount_spacing_on">Spacing enabled</string>
    <string name="currency_order_after">Currency after amount</string>
    <string name="currency_order_before">Currency before amount</string>
    <string name="date">Date</string>
    <string name="decimal_separator">Decimal separator</string>
    <string name="default_currency">Default currency</string>
    <string name="default_posting_fields">Default fields in new posting</string>
    <string name="default_status">Default status</string>
    <string name="default_transaction_fields">Default fields in new transaction</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="error">Error</string>
    <string name="error_reading_file">Error while reading file</string>
    <string name="error_writing_file">Error while writing file</string>
    <string name="file">File</string>
    <string name="go_to_settings">Go to the settings to configure one.</string>
    <string name="mismatch_no_delete">File contents outdated, aborting delete</string>
    <string name="mismatch_no_write">File contents outdated, aborting write</string>
    <string name="no_file_yet">You don&#8217;t have a file configured yet.</string>
    <string name="no_search_results">Couldn&#8217;t find any results for your search.</string>
    <string name="no_transactions_yet">Couldn&#8217;t find any transactions.</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="payee">Payee</string>
    <string name="posting_width">Width of postings written to file</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_amount">Remove amount</string>
    <string name="remove_assertion">Remove assertion</string>
    <string name="remove_assertion_cost">Remove assertion cost</string>
    <string name="remove_code">Remove code</string>
    <string name="remove_comment">Remove comment</string>
    <string name="remove_cost">Remove cost</string>
    <string name="remove_currency">Remove currencies</string>
    <string name="remove_note">Remove note</string>
    <string name="remove_payee">Remove payee</string>
    <string name="remove_posting">Remove posting</string>
    <string name="add_posting">Add posting</string>
    <string name="edit_posting">Edit posting</string>
    <string name="balance">Balance</string>
    <string name="postings">Postings</string>
    <string name="remove_status">Remove status</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="select_file">Select file…</string>
    <string name="separator_comma">Comma (,)</string>
    <string name="separator_point">Point (.)</string>
    <string name="settings">Settings</string>
    <string name="show">Show</string>
    <string name="status">Status</string>
    <string name="status_cleared">Cleared (*)</string>
    <string name="status_pending">Pending (!)</string>
    <string name="status_cleared_chip">CLEARED</string>
    <string name="status_pending_chip">PENDING</string>
    <string name="status_unmarked">Unmarked</string>
    <string name="stop_searching">Stop searching</string>
    <string name="stop_selection">Stop selection</string>
    <string name="templates">Templates</string>
    <string name="no_templates_yet">No templates yet</string>
    <string name="create_template">Create a template from an existing transaction</string>
    <string name="add_template">Add template</string>
    <string name="edit_template">Edit template</string>
    <string name="template_name">Template name</string>
    <string name="save_as_template">Save as template</string>
    <string name="template_actions_message">What would you like to do with this template?</string>
    <string name="template_not_found">Template not found</string>
    <plurals name="template_accounts_more">
        <item quantity="one">+%d more</item>
        <item quantity="other">+%d more</item>
    </plurals>

    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="net_worth">Net Worth</string>
    <string name="total_assets">Total Assets</string>
    <string name="total_liabilities">Total Liabilities</string>
    <string name="account_balances">Account Balances</string>
    <string name="assets">Assets</string>
    <string name="liabilities">Liabilities</string>
    <string name="equity">Equity</string>
    <string name="cash_flow_this_month">Cash Flow This Month</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="net_flow">Net Flow</string>
    <string name="no_data">No data yet</string>
    <string name="no_transactions_for_account">No transactions found for this account</string>

    <string name="cash_flow_details">Cash Flow Details</string>
    <string name="top_income">Top Income</string>
    <string name="top_expenses">Top Expenses</string>
    <string name="income_vs_expenses">Income vs Expenses</string>
    <string name="no_income_transactions">No income transactions</string>
    <string name="no_expense_transactions">No expense transactions</string>
    <string name="assets_prefixes">Assets prefixes</string>
    <string name="liabilities_prefixes">Liabilities prefixes</string>
    <string name="equity_prefixes">Equity prefixes</string>
    <string name="income_prefixes">Income prefixes</string>
    <string name="expenses_prefixes">Expenses prefixes</string>
    <string name="change_assets_prefixes">Change Assets prefixes</string>
    <string name="change_liabilities_prefixes">Change Liabilities prefixes</string>
    <string name="change_equity_prefixes">Change Equity prefixes</string>
    <string name="change_income_prefixes">Change Income prefixes</string>
    <string name="change_expenses_prefixes">Change Expenses prefixes</string>
    <string name="add_prefix">Add prefix</string>
</resources>
