...
                    note = "A note",
                    status = "*",
                    code = "123",
                    postings =
                        listOf(
                            Posting("Assets:Checking", null, null, null, null, null),
                            Posting("Expenses:Food", null, null, null, null, null),
                            Posting("Expenses:Drink", null, null, null, null, null),
                        ),
                ),
            onClick = {},
            modifier = Modifier.padding(8.dp),
        )
...
