...
                Transaction(
                    firstLine = 0,
                    lastLine = 0,
                    date = "2023-10-28",
                    status = "!",
                    code = "123",
                    payee = "Employer",
                    note = "Monthly salary",
                    postings =
                        listOf(
                            Posting(
                                account = "assets:checking",
                                amount = Amount("3000.00", "EUR", "3000.00 EUR"),
...
