...
                        unfocusedIndicatorColor = Color.Transparent,
                    ),
                modifier =
                    Modifier
                        .fillMaxWidth()
                        .focusRequester(focusRequester)
                        .testTag("search-field"),
                keyboardActions =
                    KeyboardActions(
                        onDone = {
                            keyboardController?.hide()
                            focusRequester.freeFocus()
                        },
...
                                ),
                        ),
                    1 to
                        Transaction(
                            firstLine = 3,
                            lastLine = 5,
                            date = "2023-09-01",
                            status = "!",
                            code = "123",
                            payee = "Another Payee",
                            note = null,
                            postings =
                                listOf(
...
