package ph.chrsrns.microledger.ui.add

import android.content.Context
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextReplacement
import androidx.test.core.app.ApplicationProvider
import androidx.test.ext.junit.runners.AndroidJUnit4
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import ph.chrsrns.microledger.R
import ph.chrsrns.microledger.ui.main.MainActivity
import ph.chrsrns.microledger.utils.FileManagerRule

@RunWith(AndroidJUnit4::class)
class AddActivityTest {
    @get:Rule
    val composeRule = createAndroidComposeRule<MainActivity>()

    @get:Rule
    val fileManagerRule = FileManagerRule(composeRule)

    val context: Context by lazy { ApplicationProvider.getApplicationContext() }

    @Test
    fun canDoSimpleAdd() {
        fileManagerRule.configureAppWithFile("test.journal")
        composeRule.onNodeWithContentDescription(context.getString(R.string.add)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.payee)).assertIsDisplayed().performTextReplacement("Payee")
        composeRule.onNodeWithText(context.getString(R.string.note)).assertIsDisplayed().performTextReplacement("Note")

        composeRule.onNodeWithText(context.getString(R.string.balance)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.edit_posting)).assertIsDisplayed()
        composeRule.onNodeWithText(context.getString(R.string.account)).assertIsDisplayed().performTextReplacement("Account 1")
        composeRule.onNodeWithText(context.getString(R.string.amount)).assertIsDisplayed().performTextReplacement("10")
        composeRule.onNodeWithTag("posting_sheet_save").assertIsDisplayed().performClick()

        composeRule.onNodeWithText(context.getString(R.string.balance)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.edit_posting)).assertIsDisplayed()
        composeRule.onNodeWithText(context.getString(R.string.account)).assertIsDisplayed().performTextReplacement("Account 2")
        composeRule.onAllNodesWithTag("posting_sheet_amount").onFirst().assertIsDisplayed().performTextReplacement("-10")
        composeRule.onNodeWithTag("posting_sheet_save").assertIsDisplayed().performClick()

        composeRule.onNodeWithContentDescription(context.getString(R.string.save)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText("Payee | Note", substring = true).assertIsDisplayed()
    }

    @Test
    fun canOpenAndSaveBottomSheet() {
        fileManagerRule.configureAppWithFile("test.journal")
        composeRule.onNodeWithContentDescription(context.getString(R.string.add)).assertIsDisplayed().performClick()

        composeRule.onNodeWithText(context.getString(R.string.balance)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.edit_posting)).assertIsDisplayed()
        composeRule.onNodeWithText(context.getString(R.string.account)).assertIsDisplayed().performTextReplacement("Expenses:Food")
        composeRule.onAllNodesWithTag("posting_sheet_amount").onFirst().assertIsDisplayed().performTextReplacement("10")
        composeRule.onNodeWithTag("posting_sheet_save").assertIsDisplayed().performClick()

        composeRule.onNodeWithText("Expenses:Food").assertIsDisplayed()
    }

    @Test
    fun canRemovePostingFromBottomSheet() {
        fileManagerRule.configureAppWithFile("test.journal")
        composeRule.onNodeWithContentDescription(context.getString(R.string.add)).assertIsDisplayed().performClick()

        composeRule.onNodeWithText(context.getString(R.string.balance)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.account)).assertIsDisplayed().performTextReplacement("Expenses:Food")
        composeRule.onAllNodesWithTag("posting_sheet_amount").onFirst().assertIsDisplayed().performTextReplacement("10")
        composeRule.onNodeWithTag("posting_sheet_save").assertIsDisplayed().performClick()

        composeRule.onNodeWithText(context.getString(R.string.balance)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.account)).assertIsDisplayed().performTextReplacement("Income:Salary")
        composeRule.onAllNodesWithTag("posting_sheet_amount").onFirst().assertIsDisplayed().performTextReplacement("-10")
        composeRule.onNodeWithTag("posting_sheet_save").assertIsDisplayed().performClick()

        composeRule.onNodeWithText("Expenses:Food").assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.delete)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText("Expenses:Food").assertDoesNotExist()
    }

    @Test
    fun usesCombinedNotesAndPayeesForAutocompleteWhenOnlyOneIsEnabled() {
        fileManagerRule.configureAppWithFile("only-payees.journal")
        composeRule.onNodeWithContentDescription(context.getString(R.string.add)).assertIsDisplayed().performClick()
        composeRule.onNodeWithContentDescription(context.getString(R.string.change_transaction_fields)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.remove_payee)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText(context.getString(R.string.note)).assertIsDisplayed().performClick()
        composeRule.onNodeWithText("Employer").assertIsDisplayed()
    }
}
